fixed maze tests